css/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline; }

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

.mat-elevation-2dp {
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
  transition: all .2s ease-in; }
  .mat-elevation-2dp:hover {
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.4); }

.mat-elevation-3dp {
  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 3px -2px rgba(0, 0, 0, 0.4); }

.mat-elevation-6dp {
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.4); }

.mat-elevation-8dp {
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4); }

.mat-elevation-12dp {
  box-shadow: 0 12px 16px 1px rgba(0, 0, 0, 0.14), 0 4px 22px 3px rgba(0, 0, 0, 0.12), 0 6px 7px -4px rgba(0, 0, 0, 0.4); }

.mat-elevation-16dp {
  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.4); }

.mat-elevation-24dp {
  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.4); }

body {
  height: 100vh;
  font-family: 'Muli', sans-serif;
  background: #e9e9e9; }

header {
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background: #607D8B;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4); }
  header h2 {
    font-family: 'Dancing Script', cursive;
    color: #fff;
    font-size: 36px;
    font-weight: 800; }

.board .todo-list-board {
  height: calc(100vh - 60px);
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0 65px 0;
  max-width: 100vw;
  flex-wrap: wrap; }

.list {
  position: relative;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  width: 300px;
  min-width: 300px;
  min-height: 250px;
  margin: 30px;
  border-radius: 3px;
  background: #fff;
  white-space: normal; }
  .list__header {
    padding: 12px 10px;
    position: relative;
    min-height: 18px;
    font-weight: 600;
    background: #8eacbb;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    display: flex; }
    .list__header__target {
      cursor: pointer;
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0; }
  .list__items {
    padding: 0 4px;
    margin: 8px 4px;
    flex-grow: 2; }
  .list__item, .composer__container {
    border-bottom: 1px solid #ccc;
    border-radius: 3px;
    cursor: pointer;
    margin-bottom: 6px;
    max-width: 300px;
    min-height: 20px;
    position: relative;
    z-index: 0;
    padding: 6px 6px 2px 8px;
    display: flex; }
  .list__controls {
    padding: 8px 10px; }

.is-hidden {
  display: none !important; }

.list__header__input,
.task-name__input {
  background: 0 0;
  border: none;
  border-radius: 3px;
  box-shadow: none;
  font-weight: 700;
  margin: -3px -5px;
  height: 18px;
  min-height: 18px;
  padding: 3px 5px;
  resize: none;
  max-height: 30px;
  font-family: 'Muli';
  color: rgba(0, 0, 0, 0.6);
  transition: background 85ms ease-in,border-color 85ms ease-in;
  width: 100%; }
  .list__header__input:focus,
  .task-name__input:focus {
    background-color: #fff;
    outline: none;
    color: #4d4d4d; }

.list__header__input {
  color: #fff; }

.composer__container {
  margin-bottom: 10px;
  display: flex;
  align-items: flex-end;
  position: relative;
  color: rgba(0, 0, 0, 0.6); }
  .composer__container label {
    position: absolute;
    top: 50%;
    left: 10px;
    transition: all .3s ease;
    color: #34515e; }
    .is-active label {
      transform: translateY(-120%);
      font-size: 10px; }
  .composer__container textarea {
    box-sizing: border-box;
    border: none;
    border-radius: 0;
    font-weight: 400;
    margin: 0;
    padding: 20px 0 0px;
    width: 100%;
    background: 0;
    color: rgba(0, 0, 0, 0.6);
    outline: none;
    resize: none;
    max-height: 40px;
    overflow: hidden;
    font-size: inherit; }
    .is-active textarea {
      border-bottom: 1px solid #34515e; }

.checkbox {
  height: 15px;
  width: 15px;
  border: 1px solid #dadada;
  background-color: #fff; }
  .is-done .checkbox {
    background: url(../../src/img/tick.svg) #fff;
    background-size: contain; }

.task-name__container {
  position: relative; }
  .task-name__container .task-name__target {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    cursor: pointer; }
  .task-name__container .task-name__input {
    margin-left: 10px;
    font-weight: 400; }
    .is-done .task-name__container .task-name__input {
      text-decoration: line-through; }
    .is-done .task-name__container .task-name__input:focus {
      text-decoration: none; }

.counter-done {
  display: inline-block; }

@media (max-width: 540px) {
  .board .todo-list-board {
    padding: 0; } }
@media (max-width: 992px) {
  .board .todo-list-board .list {
    margin: 30px 10px; } }
button {
  padding: .3em .6em;
  margin-top: 5px;
  margin-right: 10px;
  border: 1px solid rgba(0, 0, 0, 0.1);
  background: #58a linear-gradient(rgba(255, 255, 255, 0.2), transparent);
  border-radius: .2em;
  box-shadow: 0 0.05em 0.25em rgba(0, 0, 0, 0.5);
  color: white;
  font-size: 100%;
  line-height: 1.5;
  cursor: pointer; }
  button:focus {
    outline: none; }
  button.btn-add-task {
    background-color: #6b0; }
  button.btn-cansel-add-task {
    background-color: #eb0000; }

a.btn-remove {
  background-image: url("../../src/img/icon-light.svg");
  background-size: contain;
  background-repeat: no-repeat;
  height: 16px;
  width: 16px;
  position: absolute;
  top: 50%;
  right: 7px;
  transform: translateY(-50%);
  display: block; }

.open-list-composer, .btn-clear-all {
  display: inline-block;
  color: #8c8c8c;
  cursor: pointer;
  margin-bottom: 10px;
  text-decoration: none; }
  .open-list-composer:hover, .btn-clear-all:hover {
    text-decoration: underline; }

.btn-remove-list {
  height: 14px;
  width: 14px;
  display: block;
  cursor: pointer;
  margin-left: 10px; }
  .btn-remove-list::after {
    content: "\00d7";
    color: #fff;
    font-size: 24px;
    transform: translateY(-50%);
    position: absolute;
    padding: 10px;
    right: 2px;
    top: 45%; }

#todoBuilder {
  background: #ff9e80;
  position: absolute;
  top: 25px;
  left: 80px;
  border-radius: 100%;
  padding: 18px;
  z-index: 10;
  color: #fff; }
  #todoBuilder::after {
    content: "";
    background-image: url("../../src/img/add.svg");
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
    height: 24px;
    width: 24px; }

.btn-clear-all {
  padding-right: 20px;
  border-right: 1px solid #8c8c8c; }
  .btn-clear-all + label {
    padding-left: 20px; }

@media (max-width: 540px) {
  #todoBuilder {
    position: fixed;
    top: 80vh;
    left: calc(100vw - 15vh); } }

/*# sourceMappingURL=style.css.map */

